# 20260303_simulazioak_v1

./: .gitignore  00_prompt.md  01_analysis_claude.md  01_analysis_claude_01.md  02_analysis_googlestudio.md  02_analysis_googlestudio_01.md  03_analysis_chatgpt.md  03_analysis_chatgpt_01.md  04_audit_report.md  05_audit_report.md  06_execution_blueprint.md  07_tfg_evidence_matrix.md  08_final_report.md  09_claude_analysis_process.md  11_agent_execution_audit.md  20260304_midway_report.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
10_execution_kit/: 01_first_10_commits_checklist.md  README.md
Plans/: m2_rendering_readiness_2026-03-05.md  milestone_0.1.1_notes.md  perf_baseline_2026-03-03.json  perf_baseline_2026-03-03.md  perf_baseline_2026-03-04_drone_patrol_snapshot_off.json  perf_baseline_2026-03-04_drone_patrol_snapshot_on.json  perf_baseline_2026-03-04_no_snapshots.json  perf_baseline_2026-03-04_post_engine_opt_snapshot_off.json  perf_baseline_2026-03-04_post_engine_opt_snapshot_on.json  perf_baseline_2026-03-04_post_opt.json  perf_comparison_2026-03-04.md  perf_comparison_2026-03-04_drone_patrol.md  perf_comparison_2026-03-04_no_snapshots.md  perf_comparison_2026-03-04_post_engine_opt_snapshot_toggle.md  perf_profile_2026-03-04.txt  r3_agent_spec_ants_custom_2026-03-04.json  r3_agent_spec_drone_custom_2026-03-04.json  r3_agent_spec_reproducibility_2026-03-04.md  r3_ants_custom_load_2026-03-04.json  r3_ants_custom_run_2026-03-04.json  r3_drone_custom_load_2026-03-04.json  r3_drone_custom_run_2026-03-04.json  r4_physics_ants_clamp_saved_2026-03-04.json  (+25 more)
(+75 files in other folders)
