[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-framework"
version = "0.1.0"
description = "Modular multi-agent simulation framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Leire Goikoetxea" }]
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["sim_framework*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
